--- a/.github/workflows/nightly-build-publish.yml
+++ b/.github/workflows/nightly-build-publish.yml
@@ -18,11 +18,28 @@ jobs:
   nightly-build-publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Clone source code
+      - 
+        name: Clone source code
         uses: actions/checkout@v1
         with:
           fetch-depth: 1
-
+      - 
+        name: Prepare
+        id: prep
+        run: |
+          SHORT_SHA1=$(git rev-parse --short HEAD)
+          echo ::set-output name=short_sha1::${SHORT_SHA1}
+          VERSION=$(head -n 1 VERSION)
+          echo ::set-output name=version::${VERSION}
+          IMAGE=che-devfile-registry
+          echo ::set-output name=image::${IMAGE}
+      -
+        name: "Set up QEMU"
+        uses: docker/setup-qemu-action@v1
+      -
+        name: "Set up Docker Buildx"
+        uses: docker/setup-buildx-action@v1
+                
       - name: Login to quay.io
         uses: docker/login-action@v1
         with:
@@ -36,11 +53,17 @@ jobs:
       - name: Build and push happy path image
         run: /bin/bash arbitrary-users-patch/happy-path/build_happy_path_image.sh --push
 
-      - name: Build and push devfile image
+      - 
+        name: Build and push patched base images and happy path image
         run: |
-          SHORT_SHA1=$(git rev-parse --short HEAD)
-          docker build -t che-devfile-registry -f ./build/dockerfiles/Dockerfile --target registry .
-          docker tag che-devfile-registry quay.io/eclipse/che-devfile-registry:nightly
-          docker push quay.io/eclipse/che-devfile-registry:nightly
-          docker tag che-devfile-registry quay.io/eclipse/che-devfile-registry:${SHORT_SHA1}
-          docker push quay.io/eclipse/che-devfile-registry:${SHORT_SHA1}
+          /bin/bash arbitrary-users-patch/happy-path/build_happy_path_image.sh --push
+          /bin/bash arbitrary-users-patch/build_images.sh --push
+      -
+        name: "Build and push"
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./build/dockerfiles/Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x
+          tags:  quay.io/eclipse/${{ steps.prep.outputs.image }}:${{ steps.prep.outputs.version }},quay.io/eclipse/${{ steps.prep.outputs.image }}:${{ steps.prep.outputs.short_sha1 }}
+          push: true  
