--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -24,7 +24,6 @@ jobs:
         run: |
           find . -type f -name '*.sh' | wc -l
           find . -type f -name '*.sh' | xargs shellcheck --external-sources
-
   digest-validation:
     runs-on: ubuntu-latest
     steps:
@@ -33,14 +32,20 @@ jobs:
       run: |
         sudo pip install yq
         /bin/bash .ci/devfile-images-check.sh
-
   build:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v1
+      
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+      
     - name: Cache docker layers
       uses: actions/cache@v1
       with:
@@ -53,24 +58,24 @@ jobs:
         docker load -i ./caches/app.tar | true
     
     - name: Build devfile registry
-      run: |
-        docker build \
-          --cache-from=app \
-          -t app \
-          -f ./build/dockerfiles/Dockerfile \
-          --target registry .
-           
-    - name: Cache docker layers
-      run: |
-        mkdir -p ./caches
-        docker save -o ./caches/app.tar app
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./build/dockerfiles/Dockerfile
+        target: registry
+        platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x
+        tags: app
+        cache-from: "type=local,src=/tmp/.buildx-cache"
+        cache-to: "type=local,dest=/tmp/.buildx-cache"
+        push: false
     
     - name: Build offline devfile registry
-      run: |
-        docker build \
-          --cache-from=app \
-          -t app \
-          -f ./build/dockerfiles/Dockerfile \
-          --target offline-registry .
-   
-
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        file: ./build/dockerfiles/Dockerfile
+        target: offline-registry
+        platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/s390x
+        tags: app
+        cache-from: "type=local,src=/tmp/.buildx-cache"
+        push: false
