--- a/devfiles/quarkus/devfile.yaml
+++ b/devfiles/quarkus/devfile.yaml
@@ -57,7 +57,7 @@ components:
 
   - id: redhat/vscode-didact/latest
     preferences:
-      didact.defaultUrl: "{{ DEVFILE_REGISTRY_URL }}/devfiles/quarkus/didact.md"
+      didact.defaultUrl: "https://che-devfile-registry.prod-preview.openshift.io/devfiles/quarkus/didact.md"
       che.welcome.enable: false
       didact.openDefaultTutorialAtStartup: true
     type: chePlugin
