--- a/.github/workflows/sidecar-check.yml
+++ b/.github/workflows/sidecar-check.yml
@@ -19,45 +19,45 @@ jobs:
     name: Validate digests for sidecar images
     runs-on: ubuntu-20.04
     steps:
-      -
-        name: "Checkout source code"
+      - name: "Checkout source code"
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      -
-        name: "Set up QEMU"
+
+      - name: "Set up QEMU"
         uses: docker/setup-qemu-action@v1
-      -
-        name: "Set up Docker Buildx"
+
+      - name: "Set up Docker Buildx"
         uses: docker/setup-buildx-action@v1
-      -
-        name: "Docker quay.io Login"
+
+      - name: "Docker quay.io Login"
         uses: docker/login-action@v1
         with:
           registry: quay.io
           username: ${{ secrets.QUAY_USERNAME }}
           password: ${{ secrets.QUAY_PASSWORD }}
-      - 
-        name: Login to docker.io
+
+      - name: Login to docker.io
         uses: docker/login-action@v1
         with:
           registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - 
-        name: Login to registry.redhat.io
+
+      - name: Login to registry.redhat.io
         uses: docker/login-action@v1
         with:
           registry: registry.redhat.io
           username: ${{ secrets.CRW_BUILD_USER }}
           password: ${{ secrets.CRW_BUILD_TOKEN }}
-      - 
-        name: Login to registry.access.redhat.com
+
+      - name: Login to registry.access.redhat.com
         uses: docker/login-action@v1
         with:
           registry: registry.access.redhat.com
           username: ${{ secrets.CRW_BUILD_USER }}
           password: ${{ secrets.CRW_BUILD_TOKEN }}
+
       - name: Install skopeo
         run: |
           . /etc/os-release
@@ -66,8 +66,8 @@ jobs:
           sudo apt-get update
           sudo apt-get -y upgrade
           sudo apt-get -y install skopeo
-      - 
-        name: Run the digest checking script
+
+      - name: Run the digest checking script
         run: |
           git config --global user.name "Mykhailo Kuznietsov"
           git config --global user.email "mkuznets@redhat.com"
