--- a/.github/workflows/build-base-images.yml
+++ b/.github/workflows/build-base-images.yml
@@ -26,7 +26,7 @@ on:
       - 'dockerfiles/**'
 
 jobs:
-  next-build-publish:
+  rebuild-images-on-push:
     runs-on: ubuntu-20.04
     steps:
       - name: Clone source code
