--- a/.github/workflows/build-base-images.yml
+++ b/.github/workflows/build-base-images.yml
@@ -59,6 +59,7 @@ jobs:
         run: |
           echo "Branch: ${{ steps.vars.outputs.branch }}"
           echo "Sha: ${{ steps.vars.outputs.sha_short }}"
+          echo "GH-SHA: ${{ github.event.pull_request.head.sha }}"
 
       - name: Rebuild base images
         run: ./arbitrary-users-patch/scripts/rebuild-images-on-push.sh
