--- a/.github/workflows/build-base-images-on-push.yml
+++ b/.github/workflows/build-base-images-on-push.yml
@@ -7,20 +7,11 @@
 # SPDX-License-Identifier: EPL-2.0
 #
 
-name: Rebuild Base Images on Push
+name: Rebuild Base Images / Push to Master
 
-# enable this to test how action works for pull requests
-# on:
-#   push:
-#     paths:
-#       - 'dockerfiles/**'
-#     branches:
-#       - main
-
-# enable this to test how action works for pull requests
 on:
-  pull_request:
-    branches: 
+  push:
+    branches:
       - main
     paths:
       - 'dockerfiles/**'
@@ -49,6 +40,4 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Rebuild base images
-        run: ./arbitrary-users-patch/scripts/rebuild-images-on-push.sh
-        env:
-          COMMIT_SHA: ${{ github.event.pull_request.head.sha }}
+        run: ./arbitrary-users-patch/workflow/rebuild-images-on-push.sh --push --rm
